# chefs-to-jira

./: .editorconfig  .gitignore  AGENTS.md  README.md  SECURITY.md  docker-compose.yml  index.html  pyproject.toml
.github/: codeowners
.github/workflows/: analysis.yml  integration-tests.yml  main-tests.yml  merge-main.yml  pr-close.yml  pr-open.yml  tests.yml
.kilo/skills/issue-worktree/: SKILL.md
src/: main.py
src/cdogs/: cdogs_auth.py  constants.py
src/cdogs_helpers/: cdogs_helpers.py  constants.py
src/chefs/: constants.py
src/chefs_helpers/: chefs_helpers.py  constants.py
src/ess_helpers/: __init__.py  constants.py  decrypt_cryptr.js  ess_auth.py  package.json  requirements.txt  test-ess-decrypt-payload-js-pull-consumer.py
src/jira_helpers/: constants.py  jira_attachments.py  jira_auth.py  jira_searches.py
src/tests/cdogs/: cdogs_get_token_local.py  token_tests_cdogs.py
src/utilities/: constants.py  file_helper.py  send_admin_email.py
src/v1/models/: __init__.py  entities.py  model.py
tests/: README.md  constants.py
tests/cdogs/: test_cdogs.py  token_tests_cdogs.py
tests/chefs/: test_chefs.py
tests/jira/: attachment_tests_jira.py  search_tests_jira.py  test_attachment.txt  test_jira_attachments.py  test_jira_connection.py  test_jira_searches.py  token_tests_jira.py
tests/test_files/: chefs_test_answer_data.json  generate_test_files.py  minimal_cdogs_template.docx
users/: index.html  info-html.txt
