[tool.poetry]
name = "chefstojira"
version = "0.1.0"
description = "Take CHEFS Data to JIRA Tickets"
authors = ["DMI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {version ="^1.10.9"}
python-dotenv = 0.17.1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
